Added new pics and added style

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,65 +1,60 @@
+/*
+Fonts---> http://www.latofonts.com
+*/
+html, body {
+  font-family: 'Lato', sans-serif;
+  height: 100%;
+}
+
+
 /* Initial body */
 body {
-  left: 0;
-  margin: 0;
-  position: relative;
+  left: 30;
+  margin: 30;
 }
 
 /* Initial menu */
-.menu {
-  background: #202024;
-  background: 
-  left: -285px;  /* start off behind the scenes */
-  height: 100%;
-  position: fixed;
-  width: 285px;
+
+h1 {
+  color: #0f090b;
+  text-align: center;
 }
 
-/* Basic styling */
-
-
-.menu ul {
-  border-top: 1px solid #636366;
-  list-style: none;
-  display: inline-block;
-  margin: 0;
-  padding: 0;
+footer {
+  font-size: 12px;
+  text-align: center;
 }
 
-.menu li {
-  border-bottom: 1px solid #636366;
-  font-family: 'Open Sans', sans-serif;
-  line-height: 45px;
-  padding-bottom: 3px;
-  padding-left: 20px;
-  padding-top: 3px;
+a {
+  color: #263333;
 }
 
-.menu a {
-  color: #fff;
-  font-size: 15px;
-  text-decoration: none;
-  text-transform: uppercase;
+a:hover {
+    color: #cc181e;
+    text-decoration: none;
 }
 
-.icon-close {
-  cursor: pointer;
-  padding-left: 10px;
-  padding-top: 10px;
+img {
+  max-width: 1140px;
 }
 
-.icon-menu {
-  color: #fff;
-  cursor: pointer;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  padding-bottom: 25px;
-  padding-left: 25px;
-  padding-top: 25px;
-  text-decoration: none;
-  text-transform: uppercase;
+.nav-tabs > li {
+    float:none;
+    display:inline-block;
+    *display:inline; /* ie7 fix */
+     zoom:1; /* hasLayout ie7 trigger */
 }
 
-.icon-menu i {
-  margin-right: 5px;
+p, .social_media {
+  text-align: center;
 }
+
+p {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.nav-tabs {
+    text-align:center;
+}
+
