--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,7 @@ h1 {
 footer {
   font-size: 12px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 a {
@@ -45,16 +46,22 @@ img {
      zoom:1; /* hasLayout ie7 trigger */
 }
 
+.nav-tabs {
+    text-align:center;
+}
+
 p, .social_media {
   text-align: center;
 }
 
 p {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.nav-tabs {
-    text-align:center;
+.trening {
+  text-align: center;
 }
+
+
 
