Replaced main photo, added js folder and file, upgrade app to an angular app

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,6 @@ html, body {
   height: 100%;
 }
 
-
 /* Initial body */
 body {
   left: 30;
@@ -14,6 +13,10 @@ body {
 }
 
 /* Initial menu */
+
+.container {
+  max-width: 970px;
+}
 
 h1 {
   color: #0f090b;
@@ -33,21 +36,22 @@ a {
 a:hover {
     color: #cc181e;
     text-decoration: none;
+    font-weight: bold;
 }
 
-img {
-  max-width: 1140px;
-}
-
-.nav-tabs > li {
+.nav > li {
     float:none;
     display:inline-block;
     *display:inline; /* ie7 fix */
-     zoom:1; /* hasLayout ie7 trigger */
+    zoom:1; /* hasLayout ie7 trigger */
 }
 
-.nav-tabs {
-    text-align:center;
+.nav {
+    text-align: center;
+}
+
+img {
+  align-items: center
 }
 
 p, .social_media {
