--- a/views/kontakt.html
+++ b/views/kontakt.html
@@ -1,14 +1,42 @@
-<div class="social_media">
-	<a href="http://lansnabalans.blog.pl"><i class="fa fa-2x fa-wordpress text-inverse"></i></a>
-	<a href="https://www.facebook.com/lansnabalans/"><i class="fa fa-2x fa-fw fa-facebook text-inverse"></i></a>
-	<a href="mailto:lansnabalans@gmail.com"><i class="fa fa-envelope fa-2x text-inverse"></i></a>
-</div>
-
-<section class="trening">
-	<div class="row">
-		<div class="col-md-12">
-			<p><a target="_blank" href="http://www.onepilates.pl/">Prowadzę zajęcia w krakowskich klubach: One Pilates Studio</a> i <a target="_blank" href="http://gtxfitness.eu/">GTX Trainning Division</a></p>
-			<p>Zapraszam także do indywidualnych zajęć w ramach trenningu personalnego. </p>
+<div class="container">
+	<div class="main-image">
+		<img class="img-responsive" src="images/personalny.jpg" alt="daria loferska">
+	</div>
+	<section>
+		<h4>Zapraszam do kontaktu i wspólnych treningów!</h4>
+		<address>
+			<strong>Daria Loferska-Nędza</strong><br/>
+			<span>Kraków</span><br />
+			<span>(+48) 792 707 785</span><br />
+			<span><a href="mailto:lansnabalans@gmail.com"><span>lansnabalans[at]gmail.com</a></span><br/>
+			
+		</address>
+		<a href="https://www.facebook.com/lansnabalans/"><i class="fa fa-2x fa-facebook-square"></i></a>
+	</section>
+	<div class="trening">
+		<div class="row">
+			<div class="col-md-12">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+			
+				<h5>Zajęcia prowadzę zajęcia w dwóch krakowskich klubach:</h5>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-6 logo">
+				<a  target="_blank" href="http://www.onepilates.pl/"><img src="images/onestudio.jpg" class="center-block img-thumbnail img-responsive"></a>
+				<p class="text-center">The One Pilates Studio</p>
+				<p class="text-center">Ul.Gdyńska 21, Kraków</p>
+			</div>
+			<div class="col-xs-6 logo">
+				<a  target="_blank" href="http://gtxfitness.eu/"><img src="images/gtx.jpg" class="center-block img-thumbnail img-responsive"></a>
+				<h5 class="text-center">GTX Trainning Division</h5>
+				<p class="text-center">Ul. Królowej Jadwigi 184, Kraków</p>
+			</div>
 		</div>
 	</div>
-</section>
+
+</div>
+<hr>
