--- a/views/nav.html
+++ b/views/nav.html
@@ -5,7 +5,7 @@
 				<a href="#">Home</a>
 			</li>
 			<li class="kontakt">
-				<a ng-href="#/kontakt/:kontaktId">Kontakt</a>
+				<a ng-href="#/kontakt/:kontaktId">Trening i kontakt</a>
 			</li>
 			<li class="blog">
 				<a target="_blank" href="http://lansnabalans.blog.pl">Blog</a>
