--- a/styles/main.css
+++ b/styles/main.css
@@ -67,8 +67,12 @@ p, .social-media {
   text-align: center;
 }
 
-.pilates, .page-header {
+.pilates {
   padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.page-header {
   padding-bottom: 20px;
 }
 
