--- a/views/kontakt.html
+++ b/views/kontakt.html
@@ -21,7 +21,7 @@
 		<div class="row">
 			<div class="col-md-12">
 			
-				<h5>Zajęcia prowadzę zajęcia w dwóch krakowskich klubach:</h5>
+				<h5>Zajęcia prowadzę w dwóch krakowskich klubach:</h5>
 			</div>
 		</div>
 		<div class="row">
