--- a/views/header.html
+++ b/views/header.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1>Lans na balans <small>- Daria Loferska-Nędza</small></h1>
+	<img src="images/logo.png" class="img-responsive" alt="logo lans na balans">
 </div>
 
 
