--- a/views/header.html
+++ b/views/header.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<img src="images/logo.png" class="img-responsive" alt="logo lans na balans">
+	<img src="images/logo.png" class="img-responsive" alt="logo lans na balans" style="max-width: 350px;">
 </div>
 
 
