Update contact details

--- a/views/kontakt.html
+++ b/views/kontakt.html
@@ -5,13 +5,14 @@
 	<section>
 		<h4>Zapraszam do kontaktu i wspólnych treningów!</h4>
 		<address>
-			<strong>Daria Loferska-Nędza</strong><br/>
+			<strong>Daria Loferska</strong><br/>
 			<span>Kraków</span><br />
 			<span>(+48) 792 707 785</span><br />
 			<span><a href="mailto:lansnabalans@gmail.com"><span>lansnabalans[at]gmail.com</a></span><br/>
 			
 		</address>
-		<a href="https://www.facebook.com/lansnabalans/"><i class="fa fa-2x fa-facebook-square"></i></a>
+		<a href="https://www.facebook.com/lansnabalans/" target="_blank"><i class="fa fa-3x fa-facebook-square"></i></a>
+		<a href="https://www.instagram.com/daria_pilates/" target="_blank"><i class="fa fa-3x fa-instagram"></i></a>
 	</section>
 	<div class="trening">
 		<div class="row">
