--- a/views/main.html
+++ b/views/main.html
@@ -11,6 +11,8 @@
 	</div>
 </section>
 <div class="social-media">
-		<a href="https://www.facebook.com/lansnabalans/"><i class="fa fa-2x fa-facebook-square"></i></a>
+		<a href="https://www.facebook.com/lansnabalans/" target="_blank"><i class="fa fa-4x fa-facebook-square"></i></a>
+		<a href="https://www.instagram.com/daria_pilates/" target="_blank"><i class="fa fa-4x fa-instagram"></i></a>
+		
 </div>
 <hr>
